# dta-samples

./: .envrc  .gitignore  .tool-versions  README.md
conversation-tools/: .env-template  pyproject.toml
conversation-tools/app/: __init__.py  agent.py  config.py  routes.py  run.py  tools.py  tools_apibrasil.py
conversation-tools/app/templates/: index.html  index__full.html
example--conversation-tools/app/: agent.py  routes.py  tools.py  tools_apibrasil.py
example--conversation-tools/app/templates/: index.html
example--prompt/: pyproject.toml
example--prompt/app/: prompts.py
example--prompt/app/templates/: index.html
prompt/: .env-template  pyproject.toml  run.py
prompt/app/: __init__.py  prompts.py  routes.py
prompt/app/templates/: index.html
