[tool.poetry]
name = "example--conversation-tools"
version = "0.0.1"
description = ""
authors = ["Andre Pasold <andre.pasold@totvs.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
python-dotenv = "^1.0.1"
langfuse = "^2.38.1"
openai = "^1.35.15"
langchain = "^0.2.10"
langgraph = "^0.1.9"
langchain-openai = "^0.1.17"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
